--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-# Node.js dependencies
+# Node modules
 node_modules/
 
 # Next.js build output
 .next/
 
-# Env files
+# Production build output
+out/
+
+# Env files (local config, secrets)
 .env.local
 .env.development.local
 .env.test.local
@@ -17,11 +20,51 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS system files
+# OS generated files
 .DS_Store
+Thumbs.db
 
-# Optional npm cache folder
-.npm
+# IDE files
+.vscode/
+.idea/
+
+# Optional npm cache
+.npm/
 
 # Optional REPL history
 .node_repl_history
+
+# Mac system files
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+.DS_Store
+
+# dotenv environment variable files
+.env
+
+# VS Code extensions folder
+.vscode/
+
+# Optional: JetBrains IDEs
+.idea/
+
+# Others
+*.swp
+*.swo
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Parcel-bundler cache (if used)
+.cache/
+
+# Next.js telemetry
+.next/telemetry.json
+
