--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Node modules
+# Node.js dependencies
 node_modules/
 
 # Next.js build output
@@ -20,7 +20,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS generated files
+# OS system files
 .DS_Store
 Thumbs.db
 
@@ -28,7 +28,7 @@ Thumbs.db
 .vscode/
 .idea/
 
-# Optional npm cache
+# Optional npm cache folder
 .npm/
 
 # Optional REPL history
@@ -67,4 +67,5 @@ Thumbs.db
 
 # Next.js telemetry
 .next/telemetry.json
+
 
