--- a/.gitignore
+++ b/.gitignore
@@ -1,72 +1,55 @@
-# Node modules
 node_modules/
-
-# Next.js build output
 .next/
-
-# Production build output
 out/
 
-# Env files (local config, secrets)
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Environment files
+.env*
+!.env.example
 
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS generated files
+# OS files
 .DS_Store
 Thumbs.db
 
-# IDE files
+# IDE/editor folders
 .vscode/
 .idea/
 
-# Optional npm cache
+# npm cache
 .npm/
 
-# Optional REPL history
+# REPL history
 .node_repl_history
 
 # Mac system files
 .AppleDouble
 .LSOverride
 
-# Thumbnails
+# External disk files
 ._*
-
-# Files that might appear on external disks
 .Spotlight-V100
 .Trashes
-.DS_Store
 
-# dotenv environment variable files
-.env
-
-# VS Code extensions folder
-.vscode/
-
-# Optional: JetBrains IDEs
-.idea/
-
-# Others
+# Swap files
 *.swp
 *.swo
 
-# Yarn Integrity file
+# Yarn Integrity
 .yarn-integrity
 
-# Parcel-bundler cache (if used)
+# Cache folders
 .cache/
 
-# Next.js telemetry
+# Next.js telemetry file
 .next/telemetry.json
+
+
 
 
 
