--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
     "next": "15.4.5",
     "nodemailer": "^6.10.1",
