--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
+    "multiparty": "^4.2.3",
     "next": "15.4.5",
     "nodemailer": "^6.10.1",
     "react": "19.1.0",
