--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/formidable": "^3.4.5",
     "@types/multiparty": "^4.2.1",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
