--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.4.5",
     "nodemailer": "^6.10.1",
     "react": "19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
